# DataFrame

./: CMakeLists.txt
examples/: main.cpp
include/: data-frame.hpp  validator.hpp
src/: data-frame.cpp  validator.cpp
test/: data-frame-test.cpp  validator-test.cpp
